# HaskellTestingDemo

./: .gitignore  TastyMain.hs  UnitTestsAndPropertiesMain.hs  haskelltestingdemo.cabal
test/: PropertiesMain.hs  UnitTestsMain.hs
