-- documentation, see http://haskell.org/cabal/users-guide/

name:                haskell-testing-demo
version:             0.1.0.0
synopsis:            A testing demo for haskell
-- description:         
homepage:            https://github.com/joshcough/HaskellTestingDemo
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
-- copyright:           
category:            Demo
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git@github.com:joshcough/HaskellTestingDemo.git

library
  hs-source-dirs: src

-- TestFramework HUnit tests
test-suite unit-tests
  type:           exitcode-stdio-1.0
  main-is:        UnitTestsMain.hs
  hs-source-dirs: .
  build-depends:
    base,
    HUnit,
    test-framework,
    test-framework-hunit

-- TestFramework QuickCheck tests
test-suite properties
  type:           exitcode-stdio-1.0
  main-is:        PropertiesMain.hs
  hs-source-dirs: .
  build-depends:
    base,
    QuickCheck                 >= 2.4,
    test-framework             >= 0.6,
    test-framework-quickcheck2 >= 0.2,
    test-framework-th          >= 0.2

-- TestFramework HUnit and QuickCheck tests
test-suite unit-tests-and-properties
  type:           exitcode-stdio-1.0
  main-is:        UnitTestsAndPropertiesMain.hs
  hs-source-dirs: .
  build-depends:
    base,
    HUnit,
    QuickCheck                 >= 2.4,
    test-framework             >= 0.6,
    test-framework-hunit,
    test-framework-quickcheck2 >= 0.2,
    test-framework-th          >= 0.2

-- Tasty All
test-suite tasty
  type:           exitcode-stdio-1.0
  main-is:        TastyMain.hs
  hs-source-dirs: .
  build-depends:
    base,
    tasty >= 0.5.2,
    tasty-hunit,
    tasty-quickcheck,
    tasty-smallcheck
